[package]
name = "map-reduce"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.11.2"
lazy_static = "1.4.0"
rayon = "1.5.0"
slog = "2.7.0"
slog-async = "2.6.0"
slog-term = "2.8.0"
num_cpus = "1.13.0"
